[package]
name = "jf-zprice"
description = "Plonk-DIZK ZPrice instructions and testing vectors."
version = "0.1.0"
authors = ["Espresso Systems <zprice@espressosys.com>"]
edition = "2021"
license = "MIT"

[dependencies]
jf-plonk = { path = "../plonk" }
jf-primitives = { path = "../primitives" }
jf-utils = { path = "../utilities" }
jf-rescue = { path = "../rescue" }
prover-single-gpu = { path = "../prover_single_gpu" }

ark-bls12-377 = "0.3.0"
ark-bls12-381 = "0.3.0"
ark-bn254 = "0.3.0"
ark-bw6-761 = "0.3.0"
ark-ec = "0.3.0"
ark-ff = { version = "0.3.0", features = [ "asm" ] }
ark-poly = "0.3.0"
ark-serialize = "0.3.0"

rand_chacha = { version = "0.3.1" }
rand = "^0.8"
anyhow = { version = "1.0", default-features = false }
ark-std = { version = "0.3.0", default-features = false }
ark-ed-on-bn254 = "0.3.0"


[dev-dependencies]
criterion = "0.3"
ark-ed-on-bn254 = "0.3.0"
hex = "^0.4.3"

[[bench]]
name = "zprice_benchmark"
harness = false
